// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkChatBubble should render bot bubble correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-chat-bubble bpk-chat-bubble--animated bpk-chat-bubble--bot"
    data-backpack-ds-component="ChatBubble"
    data-testid="bpk-chat-bubble"
    style="--anim-delay: 0ms;"
  >
    <div
      class="bpk-chat-bubble__content"
    >
      How can I help?
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkChatBubble should render bot bubble with feedback buttons when showFeedback is true 1`] = `
<DocumentFragment>
  <div
    class="bpk-chat-bubble bpk-chat-bubble--animated bpk-chat-bubble--bot"
    data-backpack-ds-component="ChatBubble"
    data-testid="bpk-chat-bubble"
    style="--anim-delay: 0ms;"
  >
    <div
      class="bpk-chat-bubble__content"
    >
      Here is some information
    </div>
    <div
      class="bpk-chat-bubble__thumbs"
    >
      <button
        aria-label="Rate as useful"
        aria-pressed="false"
        class="bpk-thumb-button"
        data-backpack-ds-component="ThumbButton"
        data-testid="bpk-thumb-button-up"
        type="button"
      >
        <span
          class="bpk-thumb-button__icon"
        >
          <svg
            aria-hidden="true"
            height="1.5rem"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.443 11.896V20a1 1 0 0 0 1 1h6.035a5 5 0 0 0 4.682-3.244l2.27-6.054A2 2 0 0 0 19.557 9h-4.833a1 1 0 0 1-.97-1.243l.297-1.188A2.873 2.873 0 0 0 11.263 3a.48.48 0 0 0-.443.296l-3.227 7.838a2 2 0 0 0-.151.762zm-2 .604a1.5 1.5 0 0 0-3 0v7a1.5 1.5 0 0 0 3 0z"
            />
          </svg>
        </span>
      </button>
      <button
        aria-label="Rate as not useful"
        aria-pressed="false"
        class="bpk-thumb-button"
        data-backpack-ds-component="ThumbButton"
        data-testid="bpk-thumb-button-down"
        type="button"
      >
        <span
          class="bpk-thumb-button__icon"
        >
          <svg
            aria-hidden="true"
            height="1.5rem"
            viewBox="0 0 24 24"
            width="1.5rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16.558 12.104V4a1 1 0 0 0-1-1H9.522A5 5 0 0 0 4.84 6.244l-2.27 6.054A2 2 0 0 0 4.444 15h4.833a1 1 0 0 1 .97 1.242L9.95 17.43A2.873 2.873 0 0 0 12.737 21a.48.48 0 0 0 .443-.297l3.227-7.837a2 2 0 0 0 .15-.762zm2-.604a1.5 1.5 0 0 0 3 0v-7a1.5 1.5 0 0 0-3 0z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkChatBubble should render retry bubble correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-chat-bubble bpk-chat-bubble--animated bpk-chat-bubble--retry"
    data-backpack-ds-component="ChatBubble"
    data-testid="bpk-chat-bubble"
    style="--anim-delay: 0ms;"
  >
    <div
      class="bpk-chat-bubble__content"
    >
      Something went wrong.
      <div
        class="bpk-chat-bubble__retry"
      >
        <button
          class="bpk-chat-bubble__retry-button"
          type="button"
        >
          Try again
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkChatBubble should render suggestion bubble correctly 1`] = `
<DocumentFragment>
  <button
    aria-label="suggestion bubble"
    class="bpk-chat-bubble bpk-chat-bubble--animated bpk-chat-bubble--suggestion"
    data-backpack-ds-component="ChatBubble"
    data-testid="bpk-chat-bubble-suggestion"
    style="--anim-delay: 0ms;"
    type="button"
  >
    Show me options
  </button>
</DocumentFragment>
`;

exports[`BpkChatBubble should render user bubble correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-chat-bubble bpk-chat-bubble--animated bpk-chat-bubble--user"
    data-backpack-ds-component="ChatBubble"
    data-testid="bpk-chat-bubble"
    style="--anim-delay: 0ms;"
  >
    <div
      class="bpk-chat-bubble__content"
    >
      Hello there
    </div>
  </div>
</DocumentFragment>
`;
